--- a/packages.bib
+++ b/packages.bib
@@ -267,6 +267,14 @@ Objects},
 https://github.com/ropensci/rnaturalearth},
 }
 
+@Manual{R-rnrfa,
+  title = {rnrfa: UK National River Flow Archive Data from R},
+  author = {Claudia Vitolo},
+  year = {2022},
+  note = {R package version 2.1.0},
+  url = {https://ilapros.github.io/rnrfa/},
+}
+
 @Manual{R-scales,
   title = {scales: Scale Functions for Visualization},
   author = {Hadley Wickham and Dana Seidel},
@@ -468,6 +476,27 @@ LaTeX Documents},
   year = {2020},
   note = {ISBN 9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
+
+@Article{rnrfa2016,
+  url = {https://journal.r-project.org/archive/2016/RJ-2016-036/index.html},
+  year = {2016},
+  publisher = {R Foundation for Statistical Computing},
+  volume = {8},
+  number = {2},
+  pages = {102--116},
+  author = {{Vitolo} and {Claudia} and {Fry} and {Matthew} and {Buytaert} and {Wouter}},
+  title = {rnrfa: an R package to retrieve, filter and visualize data from the {UK National River Flow Archive}},
+  journal = {{The R Journal}},
+}
+
+@Manual{rnrfa2018,
+  year = {2018},
+  month = {11},
+  day = {21},
+  author = {{Vitolo} and {Claudia} and {Fry} and {Matthew} and {Buytaert} and {Wouter} and {Spencer} and {Michael} and {Gauster} and {Tobias}},
+  title = {rnrfa: an R package to retrieve, filter and visualize data from the {UK National River Flow Archive}},
+  journal = {{Zenodo}},
 }
 
 @Article{sf2018,
