--- a/references.bib
+++ b/references.bib
@@ -47,4 +47,251 @@
 	year = {2013},
 	pages = {16--18},
 }
-
+@article{JSSv105i07,
+  title         = {
+    Expanding Tidy Data Principles to Facilitate Missing Data Exploration,
+    Visualization and Assessment of Imputations
+  },
+  author        = {Tierney, Nicholas and Cook, Dianne},
+  year          = {2023},
+  journal       = {Journal of Statistical Software},
+  volume        = {105},
+  number        = {1},
+  pages         = {1–31},
+  doi           = {10.18637/jss.v105.i07},
+  url           = {https://www.jstatsoft.org/index.php/jss/article/view/v105i07},
+  abstract      = {
+    \&amp;lt;p\&amp;gt;Despite the large body of research on missing value
+    distributions and imputation, there is comparatively little literature with a
+    focus on how to make it easy to handle, explore, and impute missing values in
+    data. This paper addresses this gap. The new methodology builds upon tidy
+    data principles, with the goal of integrating missing value handling as a key
+    part of data analysis workflows. We define a new data structure, and a suite
+    of new operations. Together, these provide a connected framework for
+    handling, exploring, and imputing missing values. These methods are available
+    in the R package naniar.\&amp;lt;/p\&amp;gt;
+  }
+}
+@book{Mattparker2019Humble:61dc,
+  title         = {Humble Pi A comedy of Maths Errors},
+  author        = {Matt Parker},
+  year          = {2019},
+  publisher     = {Penguin}
+}
+@article{Daviddonoho201750:9bd5,
+  title         = {50 Years of Data Science},
+  author        = {David Donoho},
+  year          = {2017},
+  journal       = {Journal of Computational and Graphical Statistics},
+  volume        = {26},
+  number        = {4},
+  pages         = {745--766},
+  url           = {https://doi.org/10.1080/10618600.2017.1384734}
+}
+@book{Scottchristianson2014100:ee53,
+  title         = {100 Diagrams That Changed The World},
+  author        = {Scott Christianson},
+  year          = {2014},
+  publisher     = {Batsford}
+}
+@techreport{HenryandrewsReview:59d3,
+  title         = {
+    Review of empirical data in respect of emergence and return times reported
+    for the UK's native bat species Version 6.
+  },
+  author        = {Henry Andrews and Louis Pearson},
+  year          = {2022},
+  url           = {https://drive.google.com/file/d/1DeGHxyr9-p5XH6R6CRimsmquVD188WY8/view}
+}
+@article{Fabiocrameri2020Misuse:917a,
+  title         = {The misuse of colour in science communication},
+  author        = {Fabio Crameri and Grace E Shephard and Philip J Heron},
+  year          = {2020},
+  journal       = {Nature Communications},
+  volume        = {11},
+  number        = {5444},
+  url           = {https://doi.org/10.1038/s41467-020-19160-7}
+}
+@book{Davidmccandless2012Information:84d3,
+  title         = {Information is Beautiful},
+  author        = {David McCandless},
+  year          = {2012},
+  publisher     = {William Collins}
+}
+@book{Alansmith2022Charts:c9ad,
+  title         = {How Charts Work: Understand and Explain Data with Confidence},
+  author        = {Alan Smith},
+  year          = {2022},
+  publisher     = {FT Publishing}
+}
+@book{Edwardrtufte2020Seeing:4ec6,
+  title         = {Seeing with Fresh Eyes: Meaning, Space, Data, Truth},
+  author        = {Edward R Tufte},
+  year          = {2020},
+  publisher     = {Graphics Press}
+}
+@book{Edwardrtufte1983Visual:1a3f,
+  title         = {The Visual Display of Quantitative Information},
+  author        = {Edward R Tufte},
+  year          = {1983},
+  publisher     = {Graphics Press}
+}
+@book{yau_visualize_2011,
+  title         = {
+    Visualize {This}: {The} {Flowing} {Data} {Guide} to {Design},
+    {Visualization}, and {Statistics}
+  },
+  author        = {Yau, Nathan},
+  year          = {2011},
+  publisher     = {John Wiley \& Sons}
+}
+@book{yau_data_2013,
+  title         = {Data {Points}: {Visualization} that means something},
+  author        = {Yau, Nathan},
+  year          = {2013},
+  publisher     = {Wiley}
+}
+@book{borcard_numerical_2011,
+  title         = {Numerical {Ecology} with {R}},
+  author        = {Borcard, Daniel and Gillet, Francois and Legendre, Pierre},
+  year          = {2011},
+  publisher     = {Springer Science + Business Media},
+  series        = {Use {R}!}
+}
+@article{Krobertclarke1999Nonmetric:7dd2,
+  title         = {Nonmetric Mutivariate Analysis in Community-Level Ecotoxicology},
+  author        = {K Robert Clarke},
+  year          = {1999},
+  journal       = {Environmental Toxicology and Chemistry},
+  volume        = {18},
+  number        = {2},
+  pages         = {118--127}
+}
+@article{clarke_non-parametric_1993,
+  title         = {Non-parametric multivariate analysis of changes in community structure},
+  author        = {Clarke, K. R.},
+  year          = {1993},
+  journal       = {Australian Journal of Ecology},
+  volume        = {18},
+  pages         = {117--143}
+}
+@book{dytham_choosing_2011,
+  title         = {Choosing and {Using} {Statistics}: {A} {Biologist}'s {Guide}},
+  author        = {Dytham, Calvin},
+  year          = {2011},
+  publisher     = {Wiley-Blackwell},
+  edition       = {Third}
+}
+@book{emden_statistics_2008,
+  title         = {Statistics for {Terrified} {Biologists}},
+  author        = {Emden, Helmut van},
+  year          = {2008},
+  month         = {April},
+  publisher     = {Blackwell Publishing}
+}
+@book{fowler_practical_1998,
+  title         = {Practical {Statistics} for {Field} {Biology}},
+  author        = {Fowler, Jim and Cohen, Lou and Jarvis, Phil},
+  year          = {1998},
+  publisher     = {Wiley},
+  edition       = {Second}
+}
+@book{fox_ecological_2015,
+  title         = {Ecological {Statistics}},
+  author        = {Fox, Gordon A and Negrete-Yankelevich, Simoneta and {And}},
+  year          = {2015},
+  publisher     = {Oxford University Press},
+  url           = {ww.oup.com}
+}
+@book{legendre_numerical_2012,
+  title         = {Numerical {Ecology}},
+  author        = {Legendre, Pierre and Legendre, Louis},
+  year          = {2012},
+  publisher     = {Elsevier},
+  series        = {Developments in {Environmental} {Modelling}},
+  edition       = {Third English}
+}
+@book{zuur_analysiing_2007,
+  title         = {Analysiing {Ecological} {Data}},
+  author        = {Zuur, Alain F. and Ieno, Elena N. and Smith, Graham M.},
+  year          = {2007},
+  publisher     = {Springer Science + Business Media}
+}
+@book{NE_2020,
+  title         = {Natural England’s Science, Evidence and Evaluation Strategy (2020-2025)},
+  author        = {{Natural England}},
+  year          = {2020},
+  publisher     = {Natural England},
+  volume        = {NE764},
+  url           = {http://publications.naturalengland.org.uk/publication/5027096999231488}
+}
+@article{knuth_literate_1984,
+  title         = {Literate Programming},
+  author        = {Knuth, Donald E.},
+  year          = {1984},
+  month         = {may},
+  journal       = {Comput. J.},
+  publisher     = {Oxford University Press, Inc.},
+  address       = {USA},
+  volume        = {27},
+  number        = {2},
+  pages         = {97–111},
+  doi           = {10.1093/comjnl/27.2.97},
+  issn          = {0010-4620},
+  url           = {https://doi.org/10.1093/comjnl/27.2.97},
+  numpages      = {15},
+  issue_date    = {May 1984}
+}
+@book{hundt_bat_2012,
+  title         = {Bat {Surveys}: {Good} {Practice} {Guidelines}},
+  author        = {Hundt, L.},
+  year          = {2012},
+  publisher     = {Bat Conservation Trust},
+  note          = {Backup Publisher: Bat Conservation Trust},
+  edition       = {Second}
+}
+@book{coliins_bat_2016,
+  title         = {Bat {Surveys} for Professional Ecologists: {Good} {Practice} {Guidelines}},
+  author        = {Coliins, J. (ed.)},
+  year          = {2016},
+  publisher     = {Bat Conservation Trust},
+  edition       = {Third},
+  isbn          = {978-1-872745-96-1},
+  url           = {https://www.bats.org.uk/news/2016/02/bat-surveys-for-professional-ecologists-good-practice-guidelines-3rd-edition}
+}
+@book{coliins_bat_2023,
+  title         = {Bat {Surveys} for Professional Ecologists: {Good} {Practice} {Guidelines}},
+  author        = {Coliins, J. (ed.)},
+  year          = {2023},
+  publisher     = {Bat Conservation Trust},
+  edition       = {Fourth},
+  isbn          = {978-1-7395126-0-6},
+  url           = {https://www.bats.org.uk/news/2023/09/bat-surveys-for--ecologists-good-practice-guidelines-4th-edition-launched}
+}
+@book{bct_bat_2007,
+  title         = {Bat {Surveys}: {Good} {Practice} {Guidelines}},
+  author        = {{Bat Conservation Trust}},
+  year          = {2007},
+  publisher     = {Bat Conservation Trust, London},
+  isbn          = {978-1-872745-99-2}
+}
+@article{Zuur2010,
+  author = {Zuur, Alain F. and Ieno, Elena N. and Elphick, Chris S.},
+  title = {A protocol for data exploration to avoid common statistical problems},
+  journal = {Methods in Ecology and Evolution},
+  volume = {1},
+  number = {1},
+  pages = {3-14},
+  keywords = {collinearity, data exploration, independence, transformations, type I and II errors, zero inflation},
+  doi = {https://doi.org/10.1111/j.2041-210X.2009.00001.x},
+  url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/j.2041-210X.2009.00001.x},
+  eprint = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/j.2041-210X.2009.00001.x},
+  abstract = {Summary 1. While teaching statistics to ecologists, the lead authors of this paper have noticed common statistical problems. If a random sample of their work (including scientific papers) produced before doing these courses were selected, half would probably contain violations of the underlying assumptions of the statistical techniques employed. 2. Some violations have little impact on the results or ecological conclusions; yet others increase type I or type II errors, potentially resulting in wrong ecological conclusions. Most of these violations can be avoided by applying better data exploration. These problems are especially troublesome in applied ecology, where management and policy decisions are often at stake. 3. Here, we provide a protocol for data exploration; discuss current tools to detect outliers, heterogeneity of variance, collinearity, dependence of observations, problems with interactions, double zeros in multivariate analysis, zero inflation in generalized linear modelling, and the correct type of relationships between dependent and independent variables; and provide advice on how to address these problems when they arise. We also address misconceptions about normality, and provide advice on data transformations. 4. Data exploration avoids type I and type II errors, among other problems, thereby reducing the chance of making wrong ecological conclusions and poor recommendations. It is therefore essential for good quality management and policy based on statistical analyses.},
+  year = {2010}
+}
+@Manual{stan2023,
+  title = {cmdstanr: R Interface to 'CmdStan'},
+  author = {Jonah Gabry and Rok Češnovar and Andrew Johnson},
+  year = {2023},
+  note = {https://mc-stan.org/cmdstanr/, https://discourse.mc-stan.org},
+}
