--- a/resources.qmd
+++ b/resources.qmd
@@ -95,11 +95,12 @@ A prime resource for learning `r glue("{ds_txt}")` with R are the the online boo
 
 [R for Data Science](https://r4ds.hadley.nz/) (R4DS), now in its 2^nd^ edition, is an excellent overview of data science with R; it introduces the [`tidyverse`](https://www.tidyverse.org/) a collection of packages providing essential data science tools [@tidyverse2019; @R-tidyverse]; many of these individual packages are referenced below. The tidyverse packages have been widely adopted by R Data Scientists; all packages share an underlying design philosophy, grammar, and data structures.
 
-There are many free learning resources online; well structured courses are:
+There are many free and other learning resources online; well structured courses are:
 
 -   [RStudio](https://education.rstudio.com/)
 -   [Coding Club](https://ourcodingclub.github.io/) especially for ecologists and environmental scientists.
 -   [R for the Rest of US](https://rfortherestofus.com/courses/getting-started/)
+-   [Albert Rapp](https://albert-rapp.de/) he also has, freely available, a large set of excellent [youtube](https://www.youtube.com/@rappa753) tutorials.
 
 Other references:
 
